# hubeau-lab

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_quickstart.ipynb  02_async_bulk_ingest.ipynb  03_health_dashboard.ipynb  04_data_coverage_explorer.ipynb  05_dom_and_metropole.ipynb
scripts/: smoke_test.py
scripts/hydrometrie/: bulk_ingest.py  coverage_sampling.py
