[project]
name = "hubeau-lab"
version = "0.1.0"
description = "Real-world usage notebooks for hubeau-data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hubeau-data>=0.3.0",
    "jupyter",
    "pandas",
    "matplotlib",
    "plotly>=6.8.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "mypy>=1.10.0,<2.0.0",
    "ipython>=8.24",
    "pydantic>=2.7.0",
]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501", "I001"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
